--- a/demo/Shortcut_helper.ipynb
+++ b/demo/Shortcut_helper.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,12 +67,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Start annotating !\n",
-    "Annotation(corpus)"
+    "#Annotation(corpus)"
    ]
   },
   {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,12 +111,30 @@
     "# Defining a new shortcut\n",
     "verb_shortcut = Shortcut(\n",
     "    name=\"Verb\",  # Name of the button to bind on (ex: \"next\", \"skip\") or name of the label (ex: \"l1\", \"l2\", or one you defined)\n",
-    "    key=\"◊\",  # Usually represents the character that is displayed.\n",
-    "    code=\"KeyV\",  # Usually represents the key that is pressed.\n",
-    "    shift_key=False,  # Wether the shift key is pressed\n",
+    "    key=\"A\",  # Usually represents the character that is displayed.\n",
+    "    code=\"KeyA\",  # Usually represents the key that is pressed.\n",
+    "    shift_key=True,  # Wether the shift key is pressed\n",
     "    alt_key=True,\n",
     "    ctrl_key=False\n",
-    ")"
+    ")\n",
+    "\n",
+    "person_shortcut = Shortcut(\n",
+    "    name=\"Person\",  # Name of the button to bind on (ex: \"next\", \"skip\") or name of the label (ex: \"l1\", \"l2\", or one you defined)\n",
+    "    key=\"S\",  # Usually represents the character that is displayed.\n",
+    "    code=\"KeyS\",  # Usually represents the key that is pressed.\n",
+    "    shift_key=True,  # Wether the shift key is pressed\n",
+    "    alt_key=True,\n",
+    "    ctrl_key=False\n",
+    ")\n",
+    "\n",
+    "org_shortcut = Shortcut(\n",
+    "    name=\"Org\",  # Name of the button to bind on (ex: \"next\", \"skip\") or name of the label (ex: \"l1\", \"l2\", or one you defined)\n",
+    "    key=\"D\",  # Usually represents the character that is displayed.\n",
+    "    code=\"KeyD\",  # Usually represents the key that is pressed.\n",
+    "    shift_key=True,  # Wether the shift key is pressed\n",
+    "    alt_key=True,\n",
+    "    ctrl_key=False\n",
+    ")\n"
    ]
   },
   {
@@ -130,12 +148,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "236ae2db1e394b41bb288ff71db40b7a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Using the previously defined shortcut\n",
-    "annotation = Annotation(corpus, labels_names=labels_names, labels_shortcuts=[verb_shortcut])"
+    "annotation = Annotation(corpus, labels_names=labels_names, labels_shortcuts=[verb_shortcut,person_shortcut,org_shortcut])"
    ]
   },
   {
@@ -193,13 +226,6 @@
     "\n",
     "Keep in mind that if you are setting up shortcuts for a person that is not working on the same browser and same keyboard, then shortcuts that you defined may not work (even though it should work in most cases)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -218,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
