--- a/demo/Simple_usage.ipynb
+++ b/demo/Simple_usage.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,34 +37,15 @@
     "    \"PayLead is a fintech company specializing in transaction data analysis. \"\n",
     "    + \"Paylead brings retail and banking together, so customers get rewarded when they buy. \" \n",
     "    + \"Welcome to the data-for-value economy.\"\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Start annotating"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "]\n",
+    "\n",
+    "## Start annotating\n",
+    "\n",
     "# Import pylighter annotation tool !\n",
-    "from pylighter import Annotation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from pylighter import Annotation\n",
+    "\n",
     "# Start annotating !\n",
-    "Annotation(corpus)"
+    "#Annotation(corpus)"
    ]
   },
   {
@@ -84,7 +65,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7c47b4c800d84044aa2b9477cdf18396",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=\"<p id='shortcut-display'>Press the keyboard keys for the shortcut you want to use !…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b0babb5a69524403ada0881108e29581",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(button_style='danger', description='Stop', style=ButtonStyle(), _dom_classes=('stop_shor…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "function logKey(e) {    /* Show shortcut */    let visible_space = document.getElementById(\"shortcut-display\");    let text_to_display = \"key:&nbsp;<b>\" + e.key + \"</b>&nbsp;&nbsp;&nbsp;&nbsp;\";    text_to_display += \"code:&nbsp;<b>\" + e.code + \"</b>&nbsp;&nbsp;&nbsp;&nbsp;\";    text_to_display += \"shiftKey:&nbsp;<b>\" + e.shiftKey + \"</b>&nbsp;&nbsp;&nbsp;&nbsp;\";    text_to_display += \"ctrlKey:&nbsp;<b>\" + e.ctrlKey + \"</b>&nbsp;&nbsp;&nbsp;&nbsp;\";    text_to_display += \"altKey:&nbsp;<b>\" + e.altKey + \"</b>\";    visible_space.innerHTML = text_to_display;    /* Hide shortcut in hidden state in python format for copy */    let hidden_space = document.getElementById(\"hidden-shortcut\");    let shiftKey = \"False\";    let ctrlKey = \"False\";    let altKey = \"False\";    if (e.shiftKey) {        shiftKey = \"True\";    }    if (e.ctrlKey) {        ctrlKey = \"True\";    }    if (e.altKey) {        altKey = \"True\";    }    let hidden_text = \"{\\\"key\\\":\\\"\" + e.key + \"\\\",\";    hidden_text += \" \\\"code\\\":\\\"\" + e.code + \"\\\",\";    hidden_text += \" \\\"shift_key\\\":\" + shiftKey + \",\";    hidden_text += \" \\\"ctrl_key\\\":\" + ctrlKey + \",\";    hidden_text += \" \\\"alt_key\\\":\" + altKey + \"}\";    hidden_space.innerHTML = hidden_text;}function stopListener() {    window.removeEventListener('keydown', logKey);}function copyToClipboard() {    let hidden_space = document.querySelector(\"#hidden-shortcut\");    let range = document.createRange();    let selection = window.getSelection();    hidden_space.style.display = \"block\";    range.selectNode(hidden_space);    selection.removeAllRanges();    selection.addRange(range);    document.execCommand(\"copy\");    hidden_space.style.display = \"none\";}function startListener() {    try {        stopListener();    } catch (err) {        console.log(err);    } finally {        window.addEventListener('keydown', logKey);    }}document.getElementsByClassName(\"stop_shortcut_button_class\")[0].addEventListener(\"click\", stopListener);document.getElementsByClassName(\"copy_shortcut_button_class\")[0].addEventListener(\"click\", copyToClipboard);document.getElementsByClassName(\"start_shortcut_button_class\")[0].addEventListener(\"click\", startListener);startListener();"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<pylighter.shortcut_helper.shortcut_helper.ShortcutHelper at 0x7f221c0c9f10>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pylighter import ShortcutHelper\n",
+    "\n",
+    "ShortcutHelper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,9 +136,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e59700d43b154e5ca5390889fc22f117",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(outputs=({'output_type': 'display_data', 'data': {'text/plain': \"HTML(value='<style>    @import url(\\\\'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "annotation = Annotation(corpus, labels_names=labels_names)"
    ]
@@ -143,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,9 +210,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e59700d43b154e5ca5390889fc22f117",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(outputs=({'output_type': 'display_data', 'data': {'text/plain': \"HTML(value='Good job, you annotated <b…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<pylighter.annotation.Annotation at 0x7f221eae6990>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Annotation(\n",
     "    corpus,\n",
@@ -172,9 +255,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>document</th>\n",
+       "      <th>labels</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PyLighter is an annotation tool for NER tasks ...</td>\n",
+       "      <td>['O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PayLead is a fintech company specializing in t...</td>\n",
+       "      <td>['O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            document  \\\n",
+       "0  PyLighter is an annotation tool for NER tasks ...   \n",
+       "1  PayLead is a fintech company specializing in t...   \n",
+       "\n",
+       "                                              labels  \n",
+       "0  ['O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', ...  \n",
+       "1  ['O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O', ...  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "pd.read_csv(path_to_save_file, sep=\";\")"
@@ -196,11 +334,400 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "my_annotation = annotation.labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'B-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O'],\n",
+       " ['O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'B-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'I-Verb',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O',\n",
+       "  'O']]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_annotation"
    ]
   },
   {
@@ -253,7 +780,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
